5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1674_1880.log
== TEST (2019-04-29 17:07:58) 
-- CODE:
mes=int(input())
if(mes<1 or mes>12):
	print("numero de mes invalido")
else:
	if(mes==1):
		print("janeiro")
	elif(mes==2):
		print("favereiro")
	elif(mes==3):
		print("marco")
	elif(mes==4):
		print("abril")
	elif(mes==5):
		print("maio")
	elif(mes==6):
		print("junho")
	elif(mes==7) :
		print("julho")
	elif(mes==8):
		print("agosto")
	elif(mes==9):
		print("setembro")
	elif(mes==10):
		print("outubro")
	elif(mes==11):
		print("novembro"):
	elif(mes==12):
		print("dezembro")
	
	
	

-- ERROR:
File "XXXX", line 26
    print("novembro"):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:08:50) 
-- CODE:
mes=int(input())
if(mes<1 or mes>12):
	print("numero de mes invalido")
else:
	if(mes==1):
		print("janeiro")
	elif(mes==2):
		print("favereiro")
	elif(mes==3):
		print("marco")
	elif(mes==4):
		print("abril")
	elif(mes==5):
		print("maio")
	elif(mes==6):
		print("junho")
	elif(mes==7) :
		print("julho")
	elif(mes==8):
		print("agosto")
	elif(mes==9):
		print("setembro")
	elif(mes==10):
		print("outubro")
	elif(mes==11):
		print("novembro")
	elif(mes==12):
		print("dezembro")
	
	
	

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 17:09:16) 
-- CODE:
mes=int(input())
if(mes<1 or mes>12):
	print("numero de mes invalido")
else:
	if(mes==1):
		print("janeiro")
	elif(mes==2):
		print("favereiro")
	elif(mes==3):
		print("marco")
	elif(mes==4):
		print("abril")
	elif(mes==5):
		print("maio")
	elif(mes==6):
		print("junho")
	elif(mes==7) :
		print("julho")
	elif(mes==8):
		print("agosto")
	elif(mes==9):
		print("setembro")
	elif(mes==10):
		print("outubro")
	elif(mes==11):
		print("novembro")
	elif(mes==12):
		print("dezembro")
	
	
	

-- EXECUTION TIME:
0.171318
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
